--- a/buttons/zeugnisse.html
+++ b/buttons/zeugnisse.html
@@ -33,8 +33,8 @@
     
     <!--ZURÜCK ODER WEITER BUTTONS-->
     <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
-    <a href="../buttons/anschreiben.html"><button class="back">Zurück zu Anschreiben</button></a>
-    <a href="../buttons/zeugnisse.html"><button class="forward">Weiter zu Zeugnisse</button></a>
+    <a href="../buttons/lebenslauf.html"><button class="back">Zurück zu Lebenslauf</button></a>
+    <a href="../buttons/kontakt.html"><button class="forward">Weiter zu Kontakt</button></a>
 
 </body>
 </html>
