--- a/buttons/anschreiben.html
+++ b/buttons/anschreiben.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 
     <title>Anschreiben</title>
+    <link rel="icon" type="x-icon" href="../images/anschreiben.png">
 </head>
 
 <body class="anschreiben">
@@ -43,8 +44,7 @@
         <br>und meine Zukunftsperspektive neu zu gestalten.
     </p>
 
-    <p>Ich bedanke mich für die Berücksichtigung meiner Bewerbung.</p>
-    <p>Gerne stehe ich Ihnen für ein Kennenlerngespräch persönlich oder digital zur Verfügung.</p>
+    <p>Gerne stehe ich Ihnen für ein Vorstellungsgespräch persönlich zur Verfügung.</p>
 
     <!--ZURÜCK ODER WEITER BUTTONS-->
     <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
