--- a/buttons/kontakt.html
+++ b/buttons/kontakt.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
 
     <title>Kontakt</title>
+    <link rel="icon" type="x-icon" href="../images/kontakt.png">
 </head>
 
 <body class="zeugnisse">
@@ -18,7 +19,9 @@
     <h1>Kontakt</h1>
 
 
-    <p>Ich freue mich auf eine baldige Rückmeldung!</p>
+    <p>Ich freue mich auf Ihre baldige Rückmeldung!
+        <br>Selbstverständlich stehe ich Ihnen jederzeit für weitere Fragen zur Verfügung.
+    </p>
 
     <ul class="kontakt">
         <li><b>Tel:</b> +49 170 4916643</li>
