--- a/buttons/lebenslauf.html
+++ b/buttons/lebenslauf.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
 
     <title>Lebenslauf</title>
+    <link rel="icon" type="x-icon" href="../images/lebenslauf.png">
 </head>
 
 <body class="lebenslauf">
@@ -93,7 +94,7 @@
         <tr>
             <th>Hobbys</th>
             <td class="hobbys">Mountain-Biking, Schwimmen,
-                <br>Reisen
+                <br>Programmieren, Reisen
             </td>
         </tr>
     </table>
