--- a/buttons/zeugnisse.html
+++ b/buttons/zeugnisse.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
 
     <title>Zeugnisse</title>
+    <link rel="icon" type="x-icon" href="../images/zeugnis.png">
 </head>
 
 <body class="zeugnisse">
