--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <title>Bewerbung</title>
+    <link rel="icon" type="image/x-icon" href="images/bewerbung.png">
 </head>
 
 <body class="index">
