--- a/buttons/anschreiben.html
+++ b/buttons/anschreiben.html
@@ -47,8 +47,8 @@
     <p>Gerne stehe ich Ihnen für ein Vorstellungsgespräch persönlich zur Verfügung.</p>
 
     <!--ZURÜCK ODER WEITER BUTTONS-->
-    <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
-    <a href="../buttons/lebenslauf.html"><button class="forward">Weiter zu Lebenslauf</button></a>
+    <a href="../"><button class="back">Zurück zur Homepage</button></a>
+    <a href="../buttons/lebenslauf"><button class="forward">Weiter zu Lebenslauf</button></a>
 </body>
 
 </html>
