--- a/buttons/kontakt.html
+++ b/buttons/kontakt.html
@@ -29,8 +29,8 @@
     </ul>
 
         <!--ZURÜCK ODER WEITER BUTTONS-->
-        <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
-        <a href="../buttons/zeugnisse.html"><button class="back">Zurück zu Zeugnisse</button></a>
+        <a href="../"><button class="back">Zurück zur Homepage</button></a>
+        <a href="../buttons/zeugnisse"><button class="back">Zurück zu Zeugnisse</button></a>
     </body>
     
     </html>
