--- a/buttons/zeugnisse.html
+++ b/buttons/zeugnisse.html
@@ -33,9 +33,9 @@
     </div>
     
     <!--ZURÜCK ODER WEITER BUTTONS-->
-    <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
-    <a href="../buttons/lebenslauf.html"><button class="back">Zurück zu Lebenslauf</button></a>
-    <a href="../buttons/kontakt.html"><button class="forward">Weiter zu Kontakt</button></a>
+    <a href="../"><button class="back">Zurück zur Homepage</button></a>
+    <a href="../buttons/lebenslauf"><button class="back">Zurück zu Lebenslauf</button></a>
+    <a href="../buttons/kontakt"><button class="forward">Weiter zu Kontakt</button></a>
 
 </body>
 </html>
