--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </h2>
 
     <div class="button-container">
-    <a href="buttons/anschreiben.html" class="link1"><button class="button1"><strong>Anschreiben</strong></button></a>
+    <a href="buttons/anschreiben" class="link1"><button class="button1"><strong>Anschreiben</strong></button></a>
     <br>
-    <a href="buttons/lebenslauf.html" class="link1"><button class="button2"><strong>Lebenslauf</strong></button></a>
+    <a href="buttons/lebenslauf" class="link1"><button class="button2"><strong>Lebenslauf</strong></button></a>
     <br>
-    <a href="buttons/zeugnisse.html" class="link1"><button class="button3"><strong>Zeugnisse</strong></button></a>
+    <a href="buttons/zeugnisse" class="link1"><button class="button3"><strong>Zeugnisse</strong></button></a>
     <br>
-    <a href="buttons/kontakt.html" class="link1"><button class="button4"><strong>Kontakt</strong></button></a>
+    <a href="buttons/kontakt" class="link1"><button class="button4"><strong>Kontakt</strong></button></a>
     </div>
 
 </body>
