--- a/buttons/lebenslauf.html
+++ b/buttons/lebenslauf.html
@@ -100,9 +100,9 @@
     </table>
 
     <!--ZURÜCK ODER WEITER BUTTONS-->
-    <a href="../index.html"><button class="back">Zurück zur Homepage</button></a>
-    <a href="../buttons/anschreiben.html"><button class="back">Zurück zu Anschreiben</button></a>
-    <a href="../buttons/zeugnisse.html"><button class="forward">Weiter zu Zeugnisse</button></a>
+    <a href="../"><button class="back">Zurück zur Homepage</button></a>
+    <a href="../buttons/anschreiben"><button class="back">Zurück zu Anschreiben</button></a>
+    <a href="../buttons/zeugnisse"><button class="forward">Weiter zu Zeugnisse</button></a>
 </body>
 
 </html>
