--- a/buttons/lebenslauf.html
+++ b/buttons/lebenslauf.html
@@ -70,7 +70,7 @@
                 <br>-<br> September 2009</td>
             <td class="school"> St. Kyrill und Method Schule,
                 <br>Gemeinde Entschets, Stadt Kardzhali, Bulgarien
-                <br><u>Bulgarische Schulabschluss: 15.09.2016</u></td>
+                <br><u>Bulgarischer Schulabschluss: 15.09.2016</u></td>
         </tr>
     </table>
 
