--- a/buttons/anschreiben.html
+++ b/buttons/anschreiben.html
@@ -22,26 +22,26 @@
     <p>Sehr geehrte Damen und Herren,</p>
 
     <p>nach einer Recherche im Internet habe ich Ihre Anzeige gesehen und mich mit großem  
-        <br>Interesse über Ihr Angebot und Ihrem Betrieb informiert. 
+        <br>Interesse über Ihr Angebot und Ihren Betrieb informiert. 
     </p>
     
-    <p>Die Möglichkeit zu haben, meine Leidenschaft für IT und Programmierung, 
-        <br>die Erweiterung meiner Kenntnisse in diesem Bereich und dabei in tollen Projekten 
+    <p>Die Möglichkeit, meine Leidenschaft und Kenntnisse für IT und Programmierung
+        <br>im Zuge einer Ausbildung zu erweitern und dabei in tollen Projekten 
         <br>mein Beitrag zu leisten, begeistert mich sehr.
-        <br>Aus diesem Grund bewerbe ich mich bei Ihnen für die Ausbildung zum Fachinfomratiker
-        <br>in Fachrichtung Anwendungsentwicklung für September 2024.
+        <br>Aus diesem Grund bewerbe ich mich bei Ihnen für die Ausbildung zum Fachinformatiker
+        <br>in der Fachrichtung Anwendungsentwicklung für September 2024.
     </p>
 
     <p>Bereits vor drei Monaten habe ich angefangen mich mit Programmierung auseinander zu setzen. 
-        <br>Trotz der Herausforderungen meiner aktuellen Ausbildung, habe ich mir die Zeit genommen, 
-        <br>um mich frühzeitig für diese Ausbildung vorzubereiten und um einen reibungslosen Start 
+        <br>Trotz der Herausforderungen meiner aktuellen Ausbildung habe ich mir die Zeit genommen, 
+        <br>mich frühzeitig für diese Ausbildung vorzubereiten um einen reibungslosen Start 
         <br>gewährleisten zu können.
     </p>
 
-    <p>Zurzeit, wie oben erwähnt, absolviere ich meine Ausbildung zum Bauzeichner in Architektur
+    <p>Zurzeit absolviere ich meine Ausbildung zum Bauzeichner in Architektur,
         <br>in der ich schulisch und betrieblich Erfolg erziele und voraussichtlich im Juli abschließen werde.
-        <br>Nichtsdestotrotz entschied ich mich für die Welt der IT und Anwendungsentwicklung einzusetzen
-        <br>und meine Zukunftsperspektive neu zu gestalten.
+        <br>Dennoch ist es mein Entschluss, mich für die Welt der IT und Anwendungsentwicklung einzusetzen
+        <br>und hiermit meine Zukunftsperspektive neu zu gestalten.
     </p>
 
     <p>Gerne stehe ich Ihnen für ein Vorstellungsgespräch persönlich zur Verfügung.</p>
