--- a/buttons/anschreiben.html
+++ b/buttons/anschreiben.html
@@ -34,7 +34,7 @@
 
     <p>Bereits vor drei Monaten habe ich angefangen mich mit Programmierung auseinander zu setzen. 
         <br>Trotz der Herausforderungen meiner aktuellen Ausbildung habe ich mir die Zeit genommen, 
-        <br>mich frühzeitig für diese Ausbildung vorzubereiten um einen reibungslosen Start 
+        <br>mich frühzeitig für diese Ausbildung vorzubereiten, um einen reibungslosen Start 
         <br>gewährleisten zu können.
     </p>
 
